# voicekey

./: README.md  pyproject.toml  requirements.txt
examples/: config.yaml  teleop_test_script.py
src/voicekey/: __main__.py  actions.py  app.py  cli.py  config.py
src/voicekey/parser/: command_parser.py
src/voicekey/pty/: runner.py
src/voicekey/speech/: vosk_engine.py
src/voicekey/utils/: logging.py
